correcting alignement on smaller screens

--- a/src/assets/css/Tabs.css
+++ b/src/assets/css/Tabs.css
@@ -14,5 +14,5 @@
     display: none;
   }
   .active-content {
-    @apply flex justify-center space-x-32
+    @apply inline md:flex md:justify-center md:space-x-32
   }
